--- a/content/modulo5.html
+++ b/content/modulo5.html
@@ -18,45 +18,321 @@
 	<main>
 		<article>
 			
-			<h2>Apresentação</h2>
+<h2>Fitossociologia</h2>
+<p>Fitossociologia é um processo relacionado a métodos de reconhecimento e definição de comunidades de plantas. Phyto significa planta e sociologia grupos ou agrupamentos. </p>
+<p>Denominam-se parâmetros fitossociológicos os índices ou indicadores utilizados para caracterizar a estrutura de uma comunidade vegetal. A estrutura refere-se à disposição, organização e arranjo dos indivíduos dentro da comunidade vegetal, tanto em altura (estrutura vertical) quanto em densidade (estrutura horizontal).</p>
+<p>Informações sobre fitossociologia podem subsidiar ações na recuperação de áreas degradadas, produção de sementes e mudas, identificação de espécies ameaçadas, tomadas de decisão sobre ações de manejo para fins de conservação, dentre muitos outros (FELFILI; VENTUROLI, 2000; BRITO et al., 2007).</p>
 
-			<p>Este curso é voltado para a capacitação profissional em Inventário Florestal. São apresentados e discutidos conceitos importantes relacionados à prática de inventários florestais.</p>
-			<p>O curso é estruturado em módulos, organizados por temas: definições, mensuração amostragem e análise de dados de vegetação.</p>
-			
-			<h2>Objetivo</h2>
+<h2>Parâmetros fitossociológicos</h2>
 
-			<p>Assegurar aos profissionais maior confiança no planejamento, na execução e na análise de dados de Inventários Florestais realizados no Brasil, seja em florestas nativas ou plantadas.</p>
-			
-			<h2>Programa</h2>
-			<ol>
-			    <li>Definição de inventário florestal</li>
-				<li>Definição de floresta</li>
-				<li>Tipos de inventário florestal</li>
-				<li>Teoria de amostragem</li>
-				<li>Mensuração florestal</li>
-				<li>Processos de amostragem</li>
-				<li>Fitossociologia e Diversidade</li>
-			</ol>
+<h3>Densidade</h3>
+<p>Expressa a participação das diferentes espécies dentro da associação vegetal.</p>
+<p>Densidade absoluta (DA) indica o número de indivíduos de uma espécie por unidade de área [hectare (ha)].</p>
 
-			<h2>O que é Inventário Florestal?</h2>
-			
-			<p>Há várias definições para inventário florestal, porém, sabe-se que todas se complementam e demonstram a coerência dos pesquisadores envolvidos com o tema.</p>
-			
-			<p>Os professores Sylvio Péllico-Netto e Doádi Brena (1997) definem o inventário florestal como a &ldquo;atividade que visa informar sobre os recursos florestais existentes em uma determinada área&rdquo;. Este é um conceito que parece amplo, entretanto, mostra que o levantamento das informações deve ser feito em uma área específica e não em uma área qualquer. Portanto, deve-se delimitar a floresta (população) a ser inventariada.</p>
-			
-			<p>O professor Waldenei Queiroz define o inventário florestal como o &ldquo;ramo da ciência florestal que visa avaliar as variáveis qualitativas e quantitativas da floresta e suas inter-relações, assim como dinâmicas de crescimento e sucessão florestal&rdquo;. Note que este conceito distingue informações que podem ser mensuradas na floresta, inclui as características ambientais (solo, clima, relevo...) e o tempo como componentes do inventário florestal.</p>
-			
-			<p>O professor Carlos Sanquetta complementa as definições anteriores considerando o uso da estatística: &ldquo;qualquer tipo de levantamento florestal, porém, a &ldquo;marca registrada&rdquo; de um IF é a sua representatividade amostral e sua validade estatística&rdquo;. Perceba que, neste caso, o inventário florestal pode ser qualquer levantamento florestal em qualquer espaço-tempo, desde que tenha representatividade amostral e validade estatística. Ou seja, as estimativas dos parâmetros populacionais devem ser válidas e precisas.</p>
-			
-			<p>As definições acima podem ser agrupadas e resumidas da seguinte forma: &ldquo;Levantamento quantitativo e qualitativo dos recursos florestais em um determinado espaço-tempo e estatisticamente representativo&rdquo; (VENTUROLI, 2015).</p>
-			
-			<p>A turma do <a href="https://www.google.com.br/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=0ahUKEwicqLbv4obVAhWMl5AKHTrbCrEQFggoMAA&amp;url=http%3A%2F%2Fwww.ibge.gov.br%2F&amp;usg=AFQjCNGuNQz2gH-A3LkAod1HaFm3Qo6FTQ">Instituto Brasileiro de Geografia e Estatística</a> (IBGE), no Manual Técnico da Vegetação Brasileira (IBGE, 2012), é mais abrangente e engloba os conceitos supracitados: &ldquo;um inventário florestal trata da descrição quantitativa e qualitativa da floresta e, no caso específico de levantamentos contínuos, caracteriza a dinâmica de crescimento. Por sua vez, o inventário florestal contínuo é aquele que compreende todos os métodos nos quais a amostragem é realizada em ocasiões sucessivas, cujos objetivos, segundo a Organização das Nações Unidas para Agricultura e Alimentação (<em>Food and Agriculture Organization of the United Nations</em> - FAO), são os seguintes:</p>
+<math><mi>D</mi><mi>A</mi><mo>=</mo><mfrac><mrow><mi>n</mi></mrow><mrow><mi>Á</mi><mi>r</mi><mi>e</mi><mi>a</mi></mrow></mfrac></math>
+ 
+<p>Densidade relativa (DR) indica a participação de cada espécie em relação ao número total de árvores/indivíduos. </p>
 
-			<ul>
-			    <li>Estimar as características existentes da floresta na época do primeiro inventário;</li>
-    			<li>Fazer o mesmo na época do segundo inventário; e</li>
-    			<li>Estimar as mudanças ocorridas na floresta durante o período compreendido entre os dois inventários.</li>
-			</ul>
+<math><mi>D</mi><mi>R</mi><mo>=</mo><mfenced separators="|"><mrow><mfrac><mrow><mi>n</mi></mrow><mrow><mi>N</mi></mrow></mfrac></mrow></mfenced><mi>*</mi><mn>100</mn></math>
+
+ 
+<p><p>n = número de indivíduos de uma determinada espécie.</p>
+N = número total de indivíduos.</p>
+
+<h3>Frequência</h3>
+
+<p>Exprime a distribuição espacial de cada espécie na área. Indica o número de unidades amostrais que uma espécie ocorre e relação ao número total de unidades amostrais.</p>
+<p>Frequência absoluta (FA) indica a porcentagem (ou proporção) de ocorrência de uma espécie em uma determinada área.</p>
+
+<math><mi>F</mi><mi>A</mi><mo>=</mo><mfrac><mrow><mi>p</mi><mi>i</mi></mrow><mrow><mi>P</mi></mrow></mfrac><mi>*</mi><mn>100</mn></math>
+ 
+
+<p>Pi = número de parcelas (unidades amostrais) com ocorrência da espécie i.</p>
+<p>P = número total de parcelas (unidades amostrais) na amostra.</p>
+
+<p>Frequência Relativa (FR) é a relação entre a frequência absoluta de determinada espécie com a soma das frequências absolutas de todas as espécies.</p>
+ 
+<p>FAi = Frequência absoluta de uma determinada espécie.</p>
+<p>∑FA = somatório das frequências absolutas de todas as espécies amostradas.</p>
+
+<p>A frequência fornece uma informação a respeito da dispersão das espécies. Espécies com um elevado número de indivíduos podem apresentar baixos valores de frequência em função de seus indivíduos estarem agrupados, ao passo que outras espécies podem apresentar 100% de frequência por seus indivíduos encontrarem-se distribuídos em todas as parcelas amostradas.</p>
+
+<h3>Dominância</h3>
+
+<p>A dominância refere-se à taxa de ocupação do ambiente pelos indivíduos de uma dada espécie por unidade de área, geralmente por hectare.</p>
+<p>Dominância Absoluta (DoA) é definida como a área basal total de uma determinada espécie (gi) por unidade de área, geralmente o hectare.</p>
+ 
+<p><math><mi>D</mi><mi>o</mi><mi>A</mi><mo>:</mo><mfrac><mrow><mi>g</mi><mi>i</mi></mrow><mrow><mi>Á</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi> </mi><mo>(</mo><mi>h</mi><mi>a</mi><mo>)</mo></mrow></mfrac></math></p>
+
+<p><math><mi>g</mi><mi>i</mi><mo>=</mo><mfrac><mrow><mi>π</mi><mo>.</mo><mi>D</mi><mi>A</mi><mi>P</mi><mo>²</mo></mrow><mrow><mn>4</mn></mrow></mfrac></math></p> 
+
+<p>Dominância Relativa (DoR) representa a porcentagem da área basal de uma determinada espécie (<i>gi</i>) em relação à área basal de todas as espécies amostradas [(G), o somatório das áreas basais individuais), ambas calculadas por unidade de área.</p>
+
+<p><math><mi>D</mi><mi>o</mi><mi>R</mi><mo>=</mo><mo>(</mo><mfrac><mrow><mi>g</mi><mi>i</mi></mrow><mrow><mi>G</mi></mrow></mfrac><mo>)</mo><mi>*</mi><mn>10</mn></math></p> 
+
+
+<p><math><mi>G</mi><mo>=</mo><mrow><mo stretchy="false">∑</mo><mrow><mi>g</mi><mi>i</mi></mrow></mrow></math></p>
+ 
+<p>A dominância pode ser definida como a projeção da área basal à superfície do solo, fornecendo, deste modo, uma medida mais eficaz da biomassa do que simplesmente o número de indivíduos.</p>
+<p><b>Índice de Valor de Importância (IVI):</b> É o índice que caracteriza a importância de cada espécie na comunidade (sob a perspectiva horizontal), reunindo os critérios de análise dos três parâmetros (DR, FR, DoR).</p>
+<p>É a soma da abundância, da frequência e da dominância relativas de cada espécie da associação vegetal.</p>
+
+<math><mi>I</mi><mi>V</mi><mi>I</mi><mo>=</mo><mi>D</mi><mi>R</mi><mo>+</mo><mi>F</mi><mi>R</mi><mo>+</mo><mi>D</mi><mi>o</mi><mi>R</mi></math> 
+
+<p>Teoricamente, a espécie mais importante em termos de IVI é aquela que apresenta o maior sucesso em explorar os recursos de seu habitat. A partir da análise de cada parâmetro que compõe o IVI pode-se compreender se a espécie é abundante ou não, se apresenta distribuição agrupada ou dispersa e também se ela possui grande área basal ou não, dando uma ideia sobre densidade, distribuição espacial e a dimensão alcançada pela população de uma espécie em relação às demais.</p>
+<p>Para saber mais sobre fitossociologia, consulte Mueller-Dombois; Ellenberg (1974), Felfili; Venturoli (2000) e Kent (2012).</p>
+
+<h2>Diversidade</h2>
+
+<p>O conceito de diversidade de espécie envolve o conhecimento da riqueza e da abundância das espécies no local.</p>
+<p>Riqueza é o número de espécies de plantas presentes em uma área.</p>
+<p>Diversidade é relativa ao número de espécies e suas abundâncias em uma comunidade ou habitat. Com a finalidade de fazer distinção entre a diversidade encontrada dentro de uma comunidade e a diversidade de uma paisagem ou região na qual observa-se uma mistura de habitats, Whittaker sugeriu os seguintes conceitos de diversidade (MAGURRAN, 1988):</p>
+<p><b>Diversidade Alfa:</b> é relativa ao número de espécies e suas abundâncias em uma área determinada ou uma comunidade.</p>
+<p>Exemplo: diversidade de espécies em uma área restrita de cerrado.</p>
+<p><b>Diversidade Beta:</b> é a diversidade entre habitats. Também é chamada de diversidade de habitats porque evidencia diferenças na composição das espécies entre as diferentes áreas.</p>
+<p>Exemplo: diversidade entre as matas e cerrado e diversidade entre áreas de floresta ao longo de um gradiente ambiental.</p>
+<p><b>Diversidade Gama:</b> é a diversidade de paisagem que reflete primariamente processos evolucionários do que processos ecológicos. Representa o número de espécies e suas abundâncias em uma determinada região, considerando todas as comunidades presentes. Seria o somatório das espécies que ocorrem em todas as matas, campos e cerrados dentro de uma bacia hidrográfica, por exemplo.</p>
+
+<h2>Índice de Diversidade de <i>Shannon-Wiener</i> (Diversidade Alfa)</h2>
+
+<p>O índice de diversidade de Shannon (H’) assume que os indivíduos são amostrados de forma aleatória de uma população infinitamente grande, assumindo também que todas as espécies estão representadas na amostra. É um índice baseado na abundância proporcional das espécies na comunidade:</p>
+
+<math><msup><mrow><mi>H</mi></mrow><mrow><mi>'</mi></mrow></msup><mo>=</mo><mi> </mi><mo>-</mo><mrow><munderover><mo stretchy="false">∑</mo><mrow><mi>i</mi><mo>=</mo><mn>1</mn></mrow><mrow><mi>s</mi></mrow></munderover><mrow><mi>p</mi><mi>i</mi><mo>.</mo><mi mathvariant="normal">l</mi><mi mathvariant="normal">n</mi><mo>⁡</mo><mo>(</mo><mi>p</mi><mi>i</mi></mrow></mrow><mo>)</mo></math>
+ 
+<p><i>s</i> é o número de espécies na amostra, pi a proporção de indivíduos de cada espécie em relação ao número total de indivíduos de todas as espécies, ou seja, a densidade relativa de cada espécie, e <i>ln</i> é logarítimo neperiano.</p>
+<p>Exemplo de cálculo do índice de<i> Shannon-Wiener</i> em duas áreas com a mesma quantidade de espécies e de indivíduos. DA e DR foram definidos anteriormente, nos estudos de fitossociologia, e os valores indicam o número de indivíduos de cada espécie:</p>
+
+<table>
+  <tr>
+    <th></th>
+    <th colspan="2">Área 1</th>
+    <th colspan="2">Área 2</th>
+  </tr>
+  <tr>
+    <th>Espécie</th>
+    <th>DA</th>
+    <th>DR</th>
+    <th>DA</th>
+    <th>DR</th>
+  </tr>
+  <tr>
+    <td>Baru</td>
+    <td>5</td>
+    <td>0,25</td>
+    <td>1</td>
+    <td>0,05</td>
+  </tr>
+  <tr>
+    <td>Ipê</td>
+    <td>5</td>
+    <td>0,25</td>
+    <td>1</td>
+    <td>0,05</td>
+  </tr>
+  <tr>
+    <td>Pequi</td>
+    <td>5</td>
+    <td>0,25</td>
+    <td>1</td>
+    <td>0,05</td>
+  </tr>
+  <tr>
+    <td>Mangaba</td>
+    <td>5</td>
+    <td>0,25</td>
+    <td>17</td>
+    <td>0,85</td>
+  </tr>
+  <tr>
+    <td><b>Total</b></td>
+    <td><b>20</b></td>
+    <td><b>1</b></td>
+    <td><b>20</b></td>
+    <td><b>1</b></td>
+  </tr>
+</table>
+
+	<ul><li>H’<sub>área 1</sub> = -∑ 0,25 * ln (0,25) +0,25 * ln (0,25) +...+ 0,25 * ln (0,25) = 1,39</li>
+		<li>H’<sub>área 2</sub> = -∑ 0,05 * ln (0,05) +0,05 * ln (0,05) +...+ 0,85 * ln (0,85) = 0,59</li></ul>
+
+<h2>Equabilidade J de Pielou</h2>
+<p>Equabilidade ou índice de Pielou (J) representa a distribuição do número de indivíduos em relação às espécies. Varia de 0 a 1,0, sendo que o valor 1,0 representa a situação em que todas as espécies possuem a mesma abundância, ou seja, a mesma quantidade de indivíduos (MAGURRAN, 1988; FELFILI; VENTUROLI, 2000).</p>
+
+<math><mi>J</mi><mo>=</mo><mfrac><mrow><msup><mrow><mi>H</mi></mrow><mrow><mi>'</mi></mrow></msup></mrow><mrow><mi>H</mi><mi>m</mi><mi>a</mi><mi>x</mi></mrow></mfrac></math>
+
+<p>H’max = ln(S); S é o número de espécies amostradas.</p>
+
+<h2>Exemplo</h2>
+<p>Cálculo da diversidade máxima nas áreas 1 e 2 do exemplo anterior:</p>
+
+<p>H<sub>max</sub>= ln(4) = 1,38</p>
+
+<p>Cálculo da equabilidade J de Pielou:</p>
+
+<math><msub><mrow><mi>J</mi></mrow><mrow><mn>1</mn><mo>(</mo><mi>á</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi> </mi><mn>1</mn><mo>)</mo></mrow></msub><mo>=</mo><mfrac><mrow><mn>1,38</mn></mrow><mrow><mn>1,38</mn></mrow></mfrac><mo>=</mo><mn>1</mn><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><mi> </mi><msub><mrow><mi>J</mi></mrow><mrow><mn>2</mn><mo>(</mo><mi>á</mi><mi>r</mi><mi>e</mi><mi>a</mi><mi> </mi><mn>2</mn><mo>)</mo></mrow></msub><mo>=</mo><mfrac><mrow><mn>0,58</mn></mrow><mrow><mn>1,39</mn></mrow></mfrac><mo>=</mo><mn>0,4</mn></math> 
+
+<p>Cálculo da diferença na riqueza florística entre duas outras áreas.</p>
+
+<table>
+  <tr>
+    <th>Espécies</th>
+    <th colspan="2">Área 1</th>
+    <th colspan="2">Área 2</th>
+    <th>H’1</th>
+    <th>H’2</th>
+  </tr>
+  <tr>
+    <td></td>
+    <td>DA</td>
+    <td>DR</td>
+    <td>DA</td>
+    <td>DR</td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <th>Ipê</th>
+    <td>8</td>
+    <td>0,2</td>
+    <td>12</td>
+    <td>0,3</td>
+    <td>-0,32</td>
+    <td>-0,36</td>
+  </tr>
+  <tr>
+    <th>Baru</th>
+    <td>8</td>
+    <td>0,2</td>
+    <td>20</td>
+    <td>0,5</td>
+    <td>-0,32</td>
+    <td>-0,35</td>
+  </tr>
+  <tr>
+    <th>Aroeira</th>
+    <td>8</td>
+    <td>0,2</td>
+    <td>2</td>
+    <td>0,05</td>
+    <td>-0,32</td>
+    <td>-0,15</td>
+  </tr>
+  <tr>
+    <th>Angico</th>
+    <td>8</td>
+    <td>0,2</td>
+    <td>2</td>
+    <td>0,05</td>
+    <td>-0,32</td>
+    <td>-0,15</td>
+  </tr>
+  <tr>
+    <th>Jatobá</th>
+    <td>8</td>
+    <td>0,2</td>
+    <td>2</td>
+    <td>0,05</td>
+    <td>-0,32</td>
+    <td>-0,15</td>
+  </tr>
+  <tr>
+    <th>Copaíba</th>
+    <td>0</td>
+    <td>0</td>
+    <td>2</td>
+    <td>0,05</td>
+    <td></td>
+    <td>-0,15</td>
+  </tr>
+  <tr>
+    <th>Total</th>
+    <td>40</td>
+    <td>1</td>
+    <td>40</td>
+    <td>1</td>
+    <td>1,61</td>
+    <td>1,30</td>
+  </tr>
+  <tr>
+    <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td><b>H’ max</b></td>
+        <td><b>1,61</b></td>
+        <td><b>1,79</b></td>
+  </tr>
+  <tr>
+    <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td><b>J</b></td>
+        <td><b>1</b></td>
+        <td><b>0,72</b></td>
+  </tr>
+</table>
+
+<h2>Índice de Jaccard – Sj (Diversidade Beta)</h2>
+<p>O índice de Jaccard é qualitativo, portanto, não considera o número de indivíduos presentes na amostra e sim a presença e a ausência deles.</p>
+
+<math><mi>S</mi><mi>j</mi><mo>=</mo><mfrac><mrow><mi>a</mi></mrow><mrow><mi>a</mi><mo>+</mo><mi>b</mi><mo>+</mo><mi>c</mi></mrow></mfrac></math>
+
+<p>a = número de espécies presentes nas duas áreas;</p>
+<p>b = número de espécies exclusivas da área/amostra 1;</p>
+<p>c = número de espécies exclusivas da área/amostra 2.</p>
+
+<h2>Índice de Sorensen – Ss (Diversidade Beta)</h2>
+<p>Índice de Similaridade de Sorensen é similar ao de Jaccard, mas dá peso maior às espécies comuns em relação às duas áreas que estão sendo comparadas.</p>
+
+<math><mi>S</mi><mi>s</mi><mo>=</mo><mfrac><mrow><mn>2</mn><mi>a</mi></mrow><mrow><mn>2</mn><mi>a</mi><mo>+</mo><mi>b</mi><mo>+</mo><mi>c</mi></mrow></mfrac></math>
+ 
+<h2>Exemplo: Diversidade Beta.</h2>
+
+<table>
+  <tr>
+    <th>Espécie</th>
+    <th>Área 1</th>
+    <th>Área 2</th>
+  </tr>
+  <tr>
+    <td>Baru</td>
+    <td>5</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <td>Ipê</td>
+    <td>10</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <td>Pequi</td>
+    <td>5</td>
+    <td>0</td>
+  </tr>
+  <tr>
+    <td>Aroeira</td>
+    <td>0</td>
+    <td>10</td>
+  </tr>
+  <tr>
+    <td>Bálsamo</td>
+    <td>0</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>Gonçalo</td>
+    <td>0</td>
+    <td>5</td>
+  </tr>
+  <tr>
+    <td>TOTAL</td>
+    <td><b>20</b></td>
+    <td><b>20</b></td>
+  </tr>
+</table>
+<p>As duas áreas representadas acima possuem o mesmo índice de diversidade de Shannon-Winer, o mesmo número de indivíduos e a mesma riqueza florística. Mas, qual é a similaridade florística entre elas? (Está na hora de pensar!!!)</p>
+
 
 		</article>
 
