--- a/content/modulo6.html
+++ b/content/modulo6.html
@@ -18,45 +18,36 @@
 	<main>
 		<article>
 			
-			<h2>Apresentação</h2>
+<p>BRITO, A.; FERREIRA, M. Z.; MELLO, J. M.; SCOLFORO, J. R. S.; OLIVEIRA, A. D.; ACEWRBI, F. W. Comparação entre os métodos de quadrantes e PRODAN para análises florística, fitossociológica e volumétrica. <b>Revista Cerne</b>, v. 13, n. 4, p. 399-405, 2007.</p>
 
-			<p>Este curso é voltado para a capacitação profissional em Inventário Florestal. São apresentados e discutidos conceitos importantes relacionados à prática de inventários florestais.</p>
-			<p>O curso é estruturado em módulos, organizados por temas: definições, mensuração amostragem e análise de dados de vegetação.</p>
-			
-			<h2>Objetivo</h2>
+<p>CUNHA, U. S. <b>Dendrometria e inventário florestal.</b> Série Técnica. Escola Agrotécnica de Manaus, Manaus, AM. 2004. 61 p.</p>
 
-			<p>Assegurar aos profissionais maior confiança no planejamento, na execução e na análise de dados de Inventários Florestais realizados no Brasil, seja em florestas nativas ou plantadas.</p>
-			
-			<h2>Programa</h2>
-			<ol>
-			    <li>Definição de inventário florestal</li>
-				<li>Definição de floresta</li>
-				<li>Tipos de inventário florestal</li>
-				<li>Teoria de amostragem</li>
-				<li>Mensuração florestal</li>
-				<li>Processos de amostragem</li>
-				<li>Fitossociologia e Diversidade</li>
-			</ol>
+<p>ENCINAS, J. I.; SILVA, G. F.; TICCHETTI, I. <b>Variáveis dendrométricas.</b> Comunicações técnicas florestais, v. 4, n. 1. Brasília, DF: UnB, Departamento de Engenharia Florestal, 2002. 102 p.</p>
 
-			<h2>O que é Inventário Florestal?</h2>
-			
-			<p>Há várias definições para inventário florestal, porém, sabe-se que todas se complementam e demonstram a coerência dos pesquisadores envolvidos com o tema.</p>
-			
-			<p>Os professores Sylvio Péllico-Netto e Doádi Brena (1997) definem o inventário florestal como a &ldquo;atividade que visa informar sobre os recursos florestais existentes em uma determinada área&rdquo;. Este é um conceito que parece amplo, entretanto, mostra que o levantamento das informações deve ser feito em uma área específica e não em uma área qualquer. Portanto, deve-se delimitar a floresta (população) a ser inventariada.</p>
-			
-			<p>O professor Waldenei Queiroz define o inventário florestal como o &ldquo;ramo da ciência florestal que visa avaliar as variáveis qualitativas e quantitativas da floresta e suas inter-relações, assim como dinâmicas de crescimento e sucessão florestal&rdquo;. Note que este conceito distingue informações que podem ser mensuradas na floresta, inclui as características ambientais (solo, clima, relevo...) e o tempo como componentes do inventário florestal.</p>
-			
-			<p>O professor Carlos Sanquetta complementa as definições anteriores considerando o uso da estatística: &ldquo;qualquer tipo de levantamento florestal, porém, a &ldquo;marca registrada&rdquo; de um IF é a sua representatividade amostral e sua validade estatística&rdquo;. Perceba que, neste caso, o inventário florestal pode ser qualquer levantamento florestal em qualquer espaço-tempo, desde que tenha representatividade amostral e validade estatística. Ou seja, as estimativas dos parâmetros populacionais devem ser válidas e precisas.</p>
-			
-			<p>As definições acima podem ser agrupadas e resumidas da seguinte forma: &ldquo;Levantamento quantitativo e qualitativo dos recursos florestais em um determinado espaço-tempo e estatisticamente representativo&rdquo; (VENTUROLI, 2015).</p>
-			
-			<p>A turma do <a href="https://www.google.com.br/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;ved=0ahUKEwicqLbv4obVAhWMl5AKHTrbCrEQFggoMAA&amp;url=http%3A%2F%2Fwww.ibge.gov.br%2F&amp;usg=AFQjCNGuNQz2gH-A3LkAod1HaFm3Qo6FTQ">Instituto Brasileiro de Geografia e Estatística</a> (IBGE), no Manual Técnico da Vegetação Brasileira (IBGE, 2012), é mais abrangente e engloba os conceitos supracitados: &ldquo;um inventário florestal trata da descrição quantitativa e qualitativa da floresta e, no caso específico de levantamentos contínuos, caracteriza a dinâmica de crescimento. Por sua vez, o inventário florestal contínuo é aquele que compreende todos os métodos nos quais a amostragem é realizada em ocasiões sucessivas, cujos objetivos, segundo a Organização das Nações Unidas para Agricultura e Alimentação (<em>Food and Agriculture Organization of the United Nations</em> - FAO), são os seguintes:</p>
+<p>FELFILI, J. M.; CARVALHO, F. A.; HAIDAR, R. F. <b>Manual para o monitoramento de parcelas permanentes nos biomas cerrado e pantanal.</b> Brasília, DF: UnB, Departamento de Engenharia Florestal, 2005. 55 p., il.</p>
 
-			<ul>
-			    <li>Estimar as características existentes da floresta na época do primeiro inventário;</li>
-    			<li>Fazer o mesmo na época do segundo inventário; e</li>
-    			<li>Estimar as mudanças ocorridas na floresta durante o período compreendido entre os dois inventários.</li>
-			</ul>
+<p>FELFILI, J. M.; CARVALHO, F. A.; LIBANO, A. M.; VENTUROLI, F.; PEREIRA, B. A. S.; MACHADO, E. L. M. Análise multivariada: princípios e métodos em estudos de vegetação. In: FELFILI, J. M. [et al.] (Orgs.). <b>Fitossociologia no Brasil:</b> métodos e estudos de caso: v. I. Viçosa, MG: Ed. UFV, 2011.</p>
+
+<p>FELFILI, J. M.; VENTUROLI, F. <b>Tópicos em análise de vegetação.</b> Comunicações técnicas florestais, v. 2, n. 2. Brasília, DF: UnB, Departamento de Engenharia Florestal, 2000. 41 p.</p>
+
+<p>KENT, M. <b>Vegetation description and data analysis</b>: a practical approach. London, UK: John Wiley & Sons, 2012. 414 p.</p>
+
+<p>MAGURRAN, A. E. <b>Ecological diversity and its measurement</b>. London, UK: Chapman and Hall, 1988. 179 p.</p>
+
+<p>MUELLER-DOMBOIS, D.; ELLENBERG, H. <b>Aims and methods of vegetation ecology.</b> New York: John Wiley & Sons, 1974.</p>
+
+<p>PÉLLICO NETTO, S.; BRENA, D. A. <b>Inventário florestal.</b> Curitiba: Editorado pelos autores, 1997. 316 p.</p>
+
+<p>SANQUETA, C. R.; WATZLAWICK, L. F.; CÔRTE, A. P. D.; FERNANDES, L. A. V. <b>Inventários florestais</b>: planejamento e execução. Curitiba: Muti-Graphic Gráfica e Editora, 2006.</p>
+
+<p>SILVA, J. A. da; PAULA NETO, F. <b>Princípios básicos de dendrometria.</b> Recife: Universidade Federal de Pernambuco, Departamento de Ciência Florestal, 1979. 191 p., il.</p>
+
+<p>SOARES, C. P. B.; PAULA NETO, F. de; SOUZA, A. L. de. <b>Dendrometria e inventário florestal.</b> Viçosa: Ed. da UFV, 2006. 276 p., il.</p>
+
+<p>VENTUROLI, F. <b>Inventário florestal</b>: princípios para uma aplicação prática. Goiânia: Editorado pelo autor, 2015. 570 p.</p>
+
+<p>VENTUROLI, F.; SIQUEIRA, K. N. <b>Dendrologia.</b> Goiânia: Gráfica UFG, 2017.</p>
+
 
 		</article>
 
