--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
 <p>O Dicionário Aurélio da Língua Portuguesa traz a seguinte definição para florestal:</p>
 
-<h3>“floresta</h3>
-<!-- [Do fr. ant. forest, atual forêt, com infl. De flor.] -->
+<div class="box"><h3>“floresta</h3>
+[Do fr. ant. forest, atual forêt, com infl. De flor.]
 <p>Substantivo feminino.</p>
 <p>1. Formação arbórea densa, na qual, ger., as copas se tocam; mata.</p>
-<p>4. Ecol. Ecossistema terrestre formado por associações arbóreas de grande extensão, em estratos superpostos (o musgoso, o herbáceo, o arbustivo e o arborescente), o que permite a utilização máxima da energia solar e a maior diversificação dos nichos ecológicos.</p>
+<p>4. Ecol. Ecossistema terrestre formado por associações arbóreas de grande extensão, em estratos superpostos (o musgoso, o herbáceo, o arbustivo e o arborescente), o que permite a utilização máxima da energia solar e a maior diversificação dos nichos ecológicos.</p></div>
 
 
 <p>Porém, para tratar de florestas no meio acadêmico, científico e governamental, necessita-se de uma definição mais técnica e objetiva, que possibilite a estimativa de área de florestas do país e também atendam a regulamentos e normas, nacionais ou internacionais, que não podem permitir dúvidas de interpretação.</p>
