Novo bt sumario + paginacao + ficha + correcoes

--- a/content/ficha-tecnica.html
+++ b/content/ficha-tecnica.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 	<header id="header">
-		<h1>Ficha Técnica</h1>
+		<div class="container">
+			<h1>Ficha Técnica</h1>
+		<button class="btsumario"></button>
+		</div>
 	</header>
 
 	<main>
@@ -27,12 +30,34 @@
 
                     <dt>Autores</dt>
                     <dd>Fábio Venturoli</dd>
-
-                
                 </dl>
             </div>
             <div class="coluna">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis officia, nobis veniam nisi cum animi aut neque soluta quod hic vitae rem ratione earum minima voluptatum exercitationem architecto blanditiis amet! Commodi velit ullam iusto repellendus, culpa, laborum blanditiis porro accusamus ipsum quos, sit adipisci unde dolores, officia quibusdam ipsa non?</p>
+                <dl>
+                    <dt>Direção do Centro Integrado de Aprendizagem em Rede • Ciar</dt>
+                    <dd>Marília de Goyaz</dd>
+
+                    <dt>Vice Direção do Centro Integrado de Aprendizagem em Rede • Ciar</dt>
+                    <dd>Silvia Carla Nunes de Figueiredo Costa</dd>
+
+                    <dt>Coordenação de Produção e de Comunicação Impressa</dt>
+                    <dd>Ana Bandeira</dd>
+
+                    <dt>Design Gráfico • Projeto Editorial</dt>
+                    <dd>Equipe de Publicação CIAR</dd>
+
+                    <dt>Projeto de identidade visual</dt>
+                    <dd>Leandro Abreu</dd>
+
+                    <dt>Ilustração</dt>
+                    <dd>Camila Maschietto</dd>
+
+                    <dt>Implementação e desenvolvimento</dt>
+                    <dd>Victor Hugo Godoi</dd>
+
+                    <dt>Diagramação</dt>
+                    <dd>Marina Giolo</dd>
+                </dl>
             </div>
         </article>
 
@@ -49,7 +74,7 @@
 	</main>
 
 	<div id="container-bt-sumario">
-		<button id='btsumario'>
+		<button class='btsumario'>
 			
 		</button>
 	</div>
