--- a/content/modulo5.html
+++ b/content/modulo5.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 	<header id="header">
-		<h1>Fitossociologia e Diversidade</h1>
+		<div class="container">
+			<h1>Fitossociologia e Diversidade</h1>
+		<button class="btsumario"></button>
+		</div>
 	</header>
 
 	<main>
@@ -77,7 +80,7 @@ N = número total de indivíduos.</p>
 <p><b>Índice de Valor de Importância (IVI):</b> É o índice que caracteriza a importância de cada espécie na comunidade (sob a perspectiva horizontal), reunindo os critérios de análise dos três parâmetros (DR, FR, DoR).</p>
 <p>É a soma da abundância, da frequência e da dominância relativas de cada espécie da associação vegetal.</p>
 
-<math><mi>I</mi><mi>V</mi><mi>I</mi><mo>=</mo><mi>D</mi><mi>R</mi><mo>+</mo><mi>F</mi><mi>R</mi><mo>+</mo><mi>D</mi><mi>o</mi><mi>R</mi></math> 
+<p><math><mi>I</mi><mi>V</mi><mi>I</mi><mo>=</mo><mi>D</mi><mi>R</mi><mo>+</mo><mi>F</mi><mi>R</mi><mo>+</mo><mi>D</mi><mi>o</mi><mi>R</mi></math> </p>
 
 <p>Teoricamente, a espécie mais importante em termos de IVI é aquela que apresenta o maior sucesso em explorar os recursos de seu habitat. A partir da análise de cada parâmetro que compõe o IVI pode-se compreender se a espécie é abundante ou não, se apresenta distribuição agrupada ou dispersa e também se ela possui grande área basal ou não, dando uma ideia sobre densidade, distribuição espacial e a dimensão alcançada pela população de uma espécie em relação às demais.</p>
 <p>Para saber mais sobre fitossociologia, consulte Mueller-Dombois; Ellenberg (1974), Felfili; Venturoli (2000) e Kent (2012).</p>
@@ -349,7 +352,7 @@ N = número total de indivíduos.</p>
 	</main>
 
 	<div id="container-bt-sumario">
-		<button id='btsumario'>
+		<button class='btsumario'>
 			
 		</button>
 	</div>
