--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<main>
 		<article>
 			
+			<span class="pagina">1</span>
 			<h2>Apresentação</h2>
 
 			<p>Este curso é voltado para a capacitação profissional em Inventário Florestal. São apresentados e discutidos conceitos importantes relacionados à prática de inventários florestais.</p>
@@ -174,7 +175,7 @@
 	</main>
 
 	<div id="container-bt-sumario">
-		<button id='btsumario'>
+		<button class='btsumario'>
 			
 		</button>
 	</div>
