--- a/content/modulo7.html
+++ b/content/modulo7.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 	<header id="header">
-		<h1>Avaliação</h1>
+		<div class="container">
+			<h1>Avaliação</h1>
+			<button class="btsumario"></button>
+		</div>
 	</header>
 
 	<main>
@@ -621,7 +624,7 @@
 	</main>
 
 	<div id="container-bt-sumario">
-		<button id='btsumario'>
+		<button class='btsumario'>
 			
 		</button>
 	</div>
